@@ -46,6 +46,7 @@ export(cycleGraph)
 export(HuqueAloshEtBhore2011)
 export(Ferber2011, FerberTimeDose2011)
 export(Entangled1Maurer2012, Entangled2Maurer2012)
+export(WangTing2014)
 
 export(extractPower, calcPower, graphTest, rqmvnorm)
 export(plotSimCI)
