@@ -48,6 +48,10 @@ Changes in version 0.8-7 (??-0?-2014)
 
 - Edges are highlighted if transition matrix cells are edited.
 
+- New example graph from Wang, B. and Ting, N. (2014): "An Application of Graphical 
+  Approach to Construct Multiple Testing Procedures in a Hypothetical Phase III Design." 
+  Frontiers in public health, 1 (75).
+
 
 Changes in version 0.8-6 (17-02-2014)
 =====================================
